--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.7.2",
+    "replace-in-file": "^6.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
