--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.26.1",
     "chart.js": "^3.7.1",
     "formik": "^2.2.9",
+    "qrcode": "^1.5.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
