--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-modal": "^3.14.4",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.7",
     "react-select": "^5.3.0",
     "react-spinners": "^0.11.0",
     "styled-components": "^5.3.3",
