--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "chart.js": "^3.7.1",
     "formik": "^2.2.9",
     "qrcode": "^1.5.0",
+    "randomcolor": "^0.6.2",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
