added some database funsctionality to the admin part

--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.26.1",
     "chart.js": "^3.7.1",
     "formik": "^2.2.9",
+    "generate-password": "^1.7.0",
     "qrcode": "^1.5.0",
     "randomcolor": "^0.6.2",
     "react": "^17.0.2",
